Updated API, basic character sheet view
