# src/app/character-sheet/models/character-sheet-list-model.ts
@@ -1,0 +1,5 @@
+export interface CharacterSheetListModel {
+  id: string;
+  name: string;
+  experience: number;
+}
